# adele-web-ui

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  justfile
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  daemon_conn.rs  forward.rs  main.rs  relay.rs  subs_forward.rs  ws_auth.rs
crates/web/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/web/src/: app.rs  auth.rs  connections.rs  context.rs  conversation_manage.rs  device_info.rs  engine.rs  global_personality.rs  knowledge.rs  main.rs  markdown.rs  mcp.rs  model.rs  personality.rs  purposes.rs  queue.rs  read_aloud.rs  reauth.rs  reply.rs  scratchpad.rs  settings.rs  sidebar.rs  tasks.rs  tool_activity.rs  transport.rs  transport_stub.rs  wire.rs
crates/web/tests/e2e/: README.md  bedrock_credentials.mjs  chat_markdown.mjs  chat_markdown_xss.mjs  connection_model_refresh.mjs  context_usage_indicator.mjs  conversation_rename_archive.mjs  conversation_switcher.mjs  global_personality_panel.mjs  knowledge_live_refresh.mjs  knowledge_panel.mjs  live_multi_client_sync.mjs  mcp_panel.mjs  package.json  personality_panel.mjs  read_aloud.mjs  reauth_recovery.mjs  scratchpad_view.mjs  settings_nav_layout.mjs  tasks_panel.mjs  transport_reliability.mjs
deploy/k8s/: 50-web-ui.yaml  60-web-ui-ingress.yaml  README.md  check-ingress-host.sh
deploy/k8s/base/: ingress.yaml  kustomization.yaml  web-ui.yaml
deploy/k8s/overlays/example/: host.yaml  kustomization.yaml  origins.yaml
docs/: k8s-deployment.md
