[workspace]
resolver = "3"
members = ["crates/server"]
# crates/web (the Leptos wasm SPA) is its OWN workspace, excluded here so the
# native gate — `cargo build`, `cargo clippy --all-targets`, `cargo test` — never
# pulls wasm/CSR deps (leptos, gloo) or tries to build them for the host target.
# It builds for wasm32-unknown-unknown via Trunk (`just build-web`); `just check`
# still fmt-checks, clippy-checks (wasm target), and native-tests it. See
# crates/web/Cargo.toml.
exclude = ["crates/web"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/adelie-ai/adele-web-ui"

# Warnings are failures, enforced by the compiler. Members inherit via
# `[lints] workspace = true`. (Cross-project standard — see AGENTS.md.)
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

# desktop-assistant crates consumed by the BFF. Path-deps via `../desktop-assistant`
# resolve to the primary checkout normally, and to the `.worktrees/adele-web-ui/
# desktop-assistant` symlink when building from a worktree (same pattern as gtk).
# client-common drops its default `dbus` feature — the BFF reaches the daemon over UDS.
desktop-assistant-application = { path = "../desktop-assistant/crates/application" }
desktop-assistant-ws = { path = "../desktop-assistant/crates/ws-interface" }
desktop-assistant-client-common = { path = "../desktop-assistant/crates/client-common", default-features = false }
desktop-assistant-api-model = { path = "../desktop-assistant/crates/api-model" }
desktop-assistant-auth-jwt = { path = "../desktop-assistant/crates/auth-jwt" }
# The domain core, for the `CLIENT_CONTEXT` task-local accessor
# (`ports::transport::current_client_context`) the forward path reads to attach
# the browser's per-turn client context (#557). Already in the resolved graph
# via application/ws/client-common — a direct dep, not a new crate.
desktop-assistant-core = { path = "../desktop-assistant/crates/core" }
