[package]
name = "adele-web-ui-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "adele-web-ui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true

desktop-assistant-application.workspace = true
desktop-assistant-ws.workspace = true
desktop-assistant-client-common.workspace = true
desktop-assistant-api-model.workspace = true
desktop-assistant-auth-jwt.workspace = true

[dev-dependencies]
# Only for tests: constructing a `SignalEvent::ClientToolCall`'s `serde_json::Value`
# arguments to assert it is NOT relayed. The BFF proper carries no JSON of its own.
serde_json.workspace = true

[lints]
workspace = true
