[package]
name = "adele-web-ui-web"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/adelie-ai/adele-web-ui"

# Own workspace (the parent excludes `crates/web`): this keeps the native BFF
# gate from ever pulling the wasm/CSR dependency graph. Built for
# wasm32-unknown-unknown via Trunk (`just build-web`).
[workspace]

[[bin]]
name = "adele-web-ui-web"
path = "src/main.rs"

# --- Pure, both-target dependencies -------------------------------------------
# The shared reducer core + the wire types. Both compile to the host target too,
# so the protocol/mapping modules are unit-testable with plain `cargo test`
# (see `src/wire.rs`). Path-deps resolve to the sibling repos in the primary
# checkout and, from a worktree, to the `.worktrees/adele-web-ui/<repo>` symlinks
# (same pattern as the server crate, one level deeper).
[dependencies]
client-ui-common = { path = "../../../client-ui-common" }
desktop-assistant-api-model = { path = "../../../desktop-assistant/crates/api-model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Base64url decode of the session JWT's payload so the SPA can read its `exp`
# claim (verification-free) and drop to login pre-emptively rather than retry-
# spam a doomed `/ws` upgrade (issue #42). Pure and both-target so the decode is
# host-testable in `src/reauth.rs`. Already in the resolved graph (no new crate).
base64 = "0.22"
# Async primitives (oneshot + combinators) used by the transport's request/reply
# correlation. Kept on *both* targets so the timer-agnostic reply-timeout core
# (`src/reply.rs`) compiles and unit-tests on the host, like `wire`/`model`.
futures = "0.3"
# Chat markdown → sanitized HTML (issue #48). Assistant output is UNTRUSTED, so
# the parser's HTML is passed through `ammonia` (an html5ever-backed sanitizer)
# to strip `<script>`, event handlers, and unsafe URL schemes before it ever
# reaches the DOM via `inner_html`. Both crates are pure Rust and compile to
# wasm AND the host, so the `markdown_to_html` core is host-tested in
# `src/markdown.rs` like `wire`/`model`. Same versions the GTK client uses
# (`adele-gtk/src/markdown.rs`), so the sanitizer posture is shared and auditable.
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
ammonia = "4"
# The reactive core + the async spawn primitive. Kept on *both* targets so the
# reducer-driving `engine` compiles — and unit-tests — on the host
# (`#[cfg(any(target_arch = "wasm32", test))]`), like `wire`/`model`: it owns the
# view `RwSignal`s and its RPC methods name `spawn_local`. Both build cleanly for
# the host (leptos' web-sys is only linked, never called; the host test build
# never spawns — the engine's transport stays `None`). The wasm build is
# unchanged — these were previously wasm-only and behave identically there. The
# browser-only WebSocket transport stays wasm-only; the host build swaps in a
# tiny stub (`transport_stub.rs`) so `engine` has a `Transport` type to name.
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen-futures = "0.4"
# Per-send idempotency keys (#570): `submit_prompt` mints a v4 UUID the reducer
# stamps on the optimistic bubble and forwards on the `SendMessage` wire field,
# so a retry re-attaches to the live turn and the echoed `UserMessageAdded`
# dedupes by exact key. The `js` feature routes `getrandom` to the browser's
# `crypto.getRandomValues` on `wasm32-unknown-unknown` (REQUIRED — without it the
# wasm build fails to find a randomness source). Pure on the host too, so the
# minting is unit-testable in `src/engine.rs`.
uuid = { version = "1", features = ["v4", "js"] }

# --- Wasm-only dependencies ---------------------------------------------------
# Excluded from the host build so `cargo test` (native) stays light and the pure
# modules don't drag in the browser-only crates. The UI modules are
# `#[cfg(target_arch = "wasm32")]`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["websocket", "http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-storage = "0.3"
wasm-bindgen = "0.2"
# `js_sys::Date::now()` for the browser wall clock the pre-emptive expiry check
# compares `exp` against (issue #42). Already a transitive dep of web-sys/
# wasm-bindgen — no new crate in the graph.
js-sys = "0.3"
console_error_panic_hook = "0.1"
# `SpeechSynthesis` + `SpeechSynthesisUtterance` back the browser read-aloud
# (issue #18); they only add API surface to the existing web-sys dep (no new
# crate). `Window` already carries the `speechSynthesis` getter.
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Navigator",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    # `.key()` on the composer's keydown event for the queue recall walk
    # (feat/queue-messages). Leptos already enables this transitively; declared
    # here so our direct use is self-documenting.
    "KeyboardEvent",
] }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
